--- a/index.html
+++ b/index.html
@@ -22,8 +22,14 @@
                 </div>
             </div>
             <div class="header__right">
-                <img class="header__repair" src="./img/repair.png" alt="repair">
-                <img class="header__search" src="./img/checkstatus.png" alt="search">
+                <div class="header__icon">
+                    <span>Оставить заявку</span>
+                    <img src="./img/repair.png" alt="repair">
+                </div>
+                <div class="header__icon">
+                    <span>Статус ремонта</span>
+                    <img class="header__search" src="./img/checkstatus.png" alt="search">
+                </div>
             </div>
         </div>
         <main>
@@ -37,7 +43,12 @@
                     <div class="main__slideItem">Специальные цены</div>
                 </div>
                 <div class="main__infoBlock">
-                    <p class="main__p">Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.</p>
+                    <div class="main__subtitle">
+                        <p class="main__p">Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.</p>
+                        <p class="main__laptop">Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера</p>
+                        <p class="main__pc">что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.</p>
+                    </div>
+                    
                     <img class="main__img" src="./img/new1.png" alt="">
                     <div class="main__buttonRead">
                         <img src="./img/read.png" alt="">
@@ -51,3 +62,4 @@
     </header>
 </body>
 </html>
+
