--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="header">
             <div class="header__left">
                 <div class="header__menu">
-                    <div class="menu__open">
+                    <div class="menu__open icon">
                         <img src="./img/burger.png" alt="menu">
                     </div>
                 </div>
@@ -22,13 +22,13 @@
                 </div>
             </div>
             <div class="header__right">
-                <div class="header__icon">
-                    <span>Оставить заявку</span>
+                <div class="header__icon icon">
+                    <span class="header__active">Оставить заявку</span>
                     <img src="./img/repair.png" alt="repair">
                 </div>
-                <div class="header__icon">
-                    <span>Статус ремонта</span>
-                    <img class="header__search" src="./img/checkstatus.png" alt="search">
+                <div class="header__icon icon">
+                    <span class="header__active">Статус ремонта</span>
+                    <img class="header__search" src="./img/search.png" alt="search">
                 </div>
             </div>
         </div>
@@ -36,7 +36,7 @@
             <div class="main">
                 <h2>Услуги и сервисы</h2>
                 <div class="main__slider">
-                    <div class="main__slideItem">Ремонтируемые бренды</div>
+                    <div class="main__slideItem main__slideItem_active">Ремонтируемые бренды</div>
                     <div class="main__slideItem">Ремонтируемые устройства</div>
                     <div class="main__slideItem">Цены на услуги</div>
                     <div class="main__slideItem">Адреса сервисных центров</div>
@@ -45,8 +45,8 @@
                 <div class="main__infoBlock">
                     <div class="main__subtitle">
                         <p class="main__p">Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.</p>
-                        <p class="main__laptop">Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера</p>
-                        <p class="main__pc">что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.</p>
+                        <p class="main__p main__laptop">Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера</p>
+                        <p class="main__p main__pc">что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.</p>
                     </div>
                     
                     <img class="main__img" src="./img/new1.png" alt="">
