--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
         </main>
     </header>
     <!-- start slider -->
-    <div class="slider">
+    <main>
+        <div class="slider">
         <h2>ремонт техники различных брендов</h2>
         <div class="slider__wrapper">
             <div class="swiper-wrapper slider__slides">
@@ -222,7 +223,8 @@
             </div>
         </div>
         
-    </div>
+        </div>
+    </main>
     <!-- end slider -->
     <script src="./js/swiper.js"></script>
     <script src="./js/main.js"></script>
