price block ready, mobile and dekstop

--- a/index.html
+++ b/index.html
@@ -307,11 +307,74 @@
                     <div class="price__onePrice swiper-slide">
                         <div class="price__oneBlock">
                             <span class="price__oneBlock_title">Ремонтные услуги</span>
-                            <span class="price__descr">Тестирование с выдачей технического заключения</span>
+                            <span class="price__descr">Диагностика</span>
                         </div>
                         <div class="price__oneBlock">
                             <span class="price__oneBlock_title">Цена</span>
                             <span class="price__descr">Бесплатно</span>
+                        </div>
+                        <div class="price__oneBlock timeBlock">
+                            <div class="price__time">
+                                <span class="price__oneBlock_title">Срок</span>
+                                <span class="price__descr">30 мин</span>
+                            </div>
+                            <div class="price__order">
+                                <span>Заказать</span>
+                                <img src="./img/arrowRight.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="price__onePrice swiper-slide">
+                        <div class="price__oneBlock">
+                            <span class="price__oneBlock_title">Ремонтные услуги</span>
+                            <span class="price__descr">Замена дисплея</span>
+                        </div>
+                        <div class="price__oneBlock">
+                            <span class="price__oneBlock_title">Цена</span>
+                            <span class="price__descr">1000р</span>
+                        </div>
+                        <div class="price__oneBlock timeBlock">
+                            <div class="price__time">
+                                <span class="price__oneBlock_title">Срок</span>
+                                <span class="price__descr">30-120 мин</span>
+                            </div>
+                            <div class="price__order">
+                                <span>Заказать</span>
+                                <img src="./img/arrowRight.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="price__onePrice swiper-slide">
+                        <div class="price__oneBlock">
+                            <span class="price__oneBlock_title">Ремонтные услуги</span>
+                            <span class="price__descr">Замена полифонического динамика</span>
+                        </div>
+                        <div class="price__oneBlock">
+                            <span class="price__oneBlock_title">Цена</span>
+                            <span class="price__descr">1000р</span>
+                        </div>
+                        <div class="price__oneBlock timeBlock">
+                            <div class="price__time">
+                                <span class="price__oneBlock_title">Срок</span>
+                                <span class="price__descr">30-120 мин</span>
+                            </div>
+                            <div class="price__order">
+                                <span>Заказать</span>
+                                <img src="./img/arrowRight.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="price__onePrice swiper-slide">
+                        <div class="price__oneBlock">
+                            <span class="price__oneBlock_title">Ремонтные услуги</span>
+                            <span class="price__descr">Замена программного обеспечения</span>
+                        </div>
+                        <div class="price__oneBlock">
+                            <span class="price__oneBlock_title">Цена</span>
+                            <span class="price__descr">1000р</span>
                         </div>
                         <div class="price__oneBlock timeBlock">
                             <div class="price__time">
@@ -326,6 +389,79 @@
                     </div>
 
                    
+                </div>
+                <div class="price__dots"></div>
+            </div>
+            <div class="price__wrapper">
+                <div class="price__table">
+                    <div class="price__row topRow">
+                        <p>Ремонтные услуги</p>
+                        <p>Цена</p>
+                        <p>Срок</p>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="price__insetBlock">
+                    
+                    <div class="price__table">
+                        <div class="price__row">
+                            <p>Диагностика</p>
+                            <p>Бесплатно</p>
+                            <p>30мин</p>
+                            <div class="price__button">
+                                <span>Заказать</span>
+                                <img src="./img/arrowRight.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="line"></div>
+                    <div class="price__table">
+                        <div class="price__row">
+                            <p>Диагностика</p>
+                            <p>Бесплатно</p>
+                            <p>30мин</p>
+                            <div class="price__button">
+                                <span>Заказать</span>
+                                <img src="./img/arrowRight.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="line"></div>
+                    <div class="price__table">
+                        <div class="price__row">
+                            <p>Диагностика</p>
+                            <p>Бесплатно</p>
+                            <p>30мин</p>
+                            <div class="price__button">
+                                <span>Заказать</span>
+                                <img src="./img/arrowRight.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="line"></div>
+                    <div class="price__table">
+                        <div class="price__row">
+                            <p>Диагностика</p>
+                            <p>Бесплатно</p>
+                            <p>30мин</p>
+                            <div class="price__button">
+                                <span>Заказать</span>
+                                <img src="./img/arrowRight.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="line"></div>
+                    <div class="price__table">
+                        <div class="price__row">
+                            <p>Диагностика</p>
+                            <p>Бесплатно</p>
+                            <p>30мин</p>
+                            <div class="price__button">
+                                <span>Заказать</span>
+                                <img src="./img/arrowRight.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
