--- a/index.html
+++ b/index.html
@@ -417,9 +417,9 @@
                     <div class="line"></div>
                     <div class="price__table">
                         <div class="price__row">
-                            <p>Диагностика</p>
-                            <p>Бесплатно</p>
-                            <p>30мин</p>
+                            <p>Замена дисплея</p>
+                            <p>1000р</p>
+                            <p>30-120 мин</p>
                             <div class="price__button">
                                 <span>Заказать</span>
                                 <img src="./img/arrowRight.svg" alt="">
@@ -429,9 +429,9 @@
                     <div class="line"></div>
                     <div class="price__table">
                         <div class="price__row">
-                            <p>Диагностика</p>
-                            <p>Бесплатно</p>
-                            <p>30мин</p>
+                            <p>Замена полифонического динамика</p>
+                            <p>1000 р</p>
+                            <p>30-120 мин</p>
                             <div class="price__button">
                                 <span>Заказать</span>
                                 <img src="./img/arrowRight.svg" alt="">
@@ -441,9 +441,9 @@
                     <div class="line"></div>
                     <div class="price__table">
                         <div class="price__row">
-                            <p>Диагностика</p>
-                            <p>Бесплатно</p>
-                            <p>30мин</p>
+                            <p>Тестирование с выдачей технического заключения</p>
+                            <p>1000 р</p>
+                            <p>30-120 мин</p>
                             <div class="price__button">
                                 <span>Заказать</span>
                                 <img src="./img/arrowRight.svg" alt="">
@@ -453,9 +453,9 @@
                     <div class="line"></div>
                     <div class="price__table">
                         <div class="price__row">
-                            <p>Диагностика</p>
-                            <p>Бесплатно</p>
-                            <p>30мин</p>
+                            <p>Замена программного обеспечяения</p>
+                            <p>1000 р</p>
+                            <p>30-120 мин</p>
                             <div class="price__button">
                                 <span>Заказать</span>
                                 <img src="./img/arrowRight.svg" alt="">
@@ -463,8 +463,29 @@
                         </div>
                     </div>
                 </div>
+                <div class="price__infoBlock">
+                    <div class="price__infoBlock_wrapper">
+                        <p>Все цены указаны с учетом НДС. Стоимость ремонта указана на единичную услугу. Для получения коммерческого предложения на постоянное обслуживание, оставьте заявку.</p>
+                        <a href="#">
+                            <span>Получить комерческое предложение</span>
+                            <!-- <span><img src="./img/arrowRight.png" alt=""></span> -->
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
+        <footer>
+            <div class="footer">
+                <div class="footer__oneBlock">
+                    <span>&copy; 2019 CPS</span>
+                    <span>Разработано командой Apesong</span>
+                </div>
+                <div class="footer__oneBlock"><a href="#">Политика конфиденциальности</a></div>
+                <div class="footer__oneBlock">
+                    <span>Информация размещенная на данной сьтранице не является публичной афертой</span>
+                </div>
+            </div>
+        </footer>
         <!-- end price blocks -->
     </main>
 
