--- a/index.html
+++ b/index.html
@@ -468,7 +468,6 @@
                         <p>Все цены указаны с учетом НДС. Стоимость ремонта указана на единичную услугу. Для получения коммерческого предложения на постоянное обслуживание, оставьте заявку.</p>
                         <a href="#">
                             <span>Получить комерческое предложение</span>
-                            <!-- <span><img src="./img/arrowRight.png" alt=""></span> -->
                         </a>
                     </div>
                 </div>
@@ -476,7 +475,7 @@
         </div>
         <footer>
             <div class="footer">
-                <div class="footer__oneBlock">
+                <div class="footer__oneBlock copyright">
                     <span>&copy; 2019 CPS</span>
                     <span>Разработано командой Apesong</span>
                 </div>
