--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                     <span>&copy; 2019 CPS</span>
                     <span>Разработано командой Apesong</span>
                 </div>
-                <div class="footer__oneBlock"><a href="#">Политика конфиденциальности</a></div>
+                <div class="footer__oneBlock"><span>Политика конфиденциальности</span></div>
                 <div class="footer__oneBlock">
                     <span>Информация размещенная на данной сьтранице не является публичной афертой</span>
                 </div>
