--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="menu__oneIcon">
                     <img src="./img/call.png" alt="call">
                 </div>
-                <div class="menu__oneIcon">
+                <div class="menu__oneIcon send_mesage">
                     <img src="./img/message.png" alt="call">
                 </div>
                 <div class="menu__oneIcon">
@@ -51,6 +51,30 @@
                 <span>EN</span>
                 <span>CH</span>
             </div>
+        </div>
+    </div>
+    <div class="modalFeedBack">
+        <div class="modalFeedBack__close">
+            <img src="./img/x.png" alt="">
+        </div>
+        <h3>Обратная связь</h3>
+        <div class="modalFeedBack__wrapper">
+            <form action="">
+                <input type="text" placeholder="Имя">
+                <input type="text" placeholder="Телефон">
+                <input type="text" placeholder="Электронная почта">
+                <textarea placeholder="Сообщение"></textarea>
+                <div class="modalFeedBack__info">
+                    <span>Нажимая “отправить”, вы даете согласие на <a href="#">обработку персональных данных</a> и соглашаетесь с нашей <a href="#">политикой конфиденциальности</a></span>
+                </div>
+                <div class="modalFeddBack__buttonBlock">
+                    <button class="submit"type="submit">
+                        <span>Отправить</span>
+                        <img src="./img/arrowRight.svg" alt="">
+                    </button>
+                </div>
+                
+            </form>
         </div>
     </div>
     <header>
