--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <div class="menu__infoBlock">
             <div class="menu__iconsBlock">
-                <div class="menu__oneIcon">
+                <div class="menu__oneIcon order_call">
                     <img src="./img/call.png" alt="call">
                 </div>
                 <div class="menu__oneIcon send_mesage">
@@ -54,26 +54,46 @@
         </div>
     </div>
     <div class="modalFeedBack">
-        <div class="modalFeedBack__close">
+        <div class="modalFeedBack__close modal_close">
             <img src="./img/x.png" alt="">
         </div>
-        <h3>Обратная связь</h3>
+        <h3 class="modalTitle">Обратная связь</h3>
         <div class="modalFeedBack__wrapper">
             <form action="">
                 <input type="text" placeholder="Имя">
                 <input type="text" placeholder="Телефон">
                 <input type="text" placeholder="Электронная почта">
                 <textarea placeholder="Сообщение"></textarea>
-                <div class="modalFeedBack__info">
+                <div class="modalFeedBack__info modal_info">
                     <span>Нажимая “отправить”, вы даете согласие на <a href="#">обработку персональных данных</a> и соглашаетесь с нашей <a href="#">политикой конфиденциальности</a></span>
                 </div>
-                <div class="modalFeddBack__buttonBlock">
+                <div class="modalFeddBack__buttonBlock buttonBlock">
                     <button class="submit"type="submit">
                         <span>Отправить</span>
                         <img src="./img/arrowRight.svg" alt="">
                     </button>
                 </div>
                 
+            </form>
+        </div>
+    </div>
+    <div class="modalCall">
+        <div class="modalFeedBack__close modal_close">
+            <img src="./img/x.png" alt="">
+        </div>
+        <h3 class="modalTitle">Заказать звонок</h3>
+        <div class="modalCall__wrapper">
+            <form action="">
+                <input type="tel" placeholder="Телефон">
+                <div class="modalFeedBack__info modal_info">
+                    <span>Нажимая “отправить”, вы даете согласие на <a href="#">обработку персональных данных</a> и соглашаетесь с нашей <a href="#">политикой конфиденциальности</a></span>
+                </div>
+                <div class="modalCall__buttonBlock buttonBlock">
+                    <button class="submit"type="submit">
+                        <span>Отправить</span>
+                        <img src="./img/arrowRight.svg" alt="">
+                    </button>
+                </div>
             </form>
         </div>
     </div>
