--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     </div>
                     <div class="header__icon icon">
                         <span class="header__active">Статус ремонта</span>
-                        <img class="header__search" src="./img/search.png" alt="search">
+                            <img class="header__search" src="./img/search.png" alt="search">
                     </div>
                 </div>
             </div>
@@ -128,11 +128,16 @@
                         <div class="main__info_icons">
                             <div class="main__icon">
                                 <span>Оставить заявку</span>
-                                <img src="./img/repair.png" alt="repair">
+                                <div class="main__icons_block">
+                                    <img src="./img/repair.png" alt="repair">
+                                </div>
+                                
                             </div>
                             <div class="main__icon">
                                 <span>Статус ремонта</span>
-                                <img class="header__search" src="./img/search.png" alt="search">
+                                <div class="main__icons_block">
+                                    <img class="header__search" src="./img/search.png" alt="search">
+                                </div>
                             </div>
                         </div>
                     </div>
